Bugfix: cookies notice not showing

--- a/Views/Shared/_Layout.cshtml.css
+++ b/Views/Shared/_Layout.cshtml.css
@@ -49,7 +49,7 @@ button.accept-policy {
 
 /* Cookie-bar */
 #cookie-bar {
-    position: absolute;
+    position: fixed;
     width: 400px;
     height: 180px;
     right: 0;
